# orchestra

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
docker/: docker-compose-swagger-ui.yaml  docker-compose.yaml  envoy.yaml
proto/exchange/: matchengine.pb  matchengine.proto  matchengine.swagger.json
proto/rollup/: rollup.pb  rollup.proto  rollup.swagger.json
src/rpc/: mod.rs
src/rpc/exchange/: google.api.rs  matchengine.rs
src/rpc/rollup/: rollup_state.rs
