[package]
name = "orchestra"
version = "0.2.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.3"
serde = { version = "1.0.124", features = [ "derive" ] }
tonic = "0.11.0"

[build-dependencies]
tonic-build = "0.11.0"

[features]
exchange = [ ]
